@@ -34,25 +34,39 @@ import java.util.regex.Pattern;
 
 public class Jdk implements Buildable, Iterable<File> {
 
-    static final Pattern VERSION_PATTERN = Pattern.compile("(\\d+)(\\.\\d+\\.\\d+)?\\+(\\d+)(@([a-f0-9]{32}))?");
-    private static final List<String> ALLOWED_PLATFORMS = Collections.unmodifiableList(Arrays.asList("linux", "windows", "darwin"));
+    private static final List<String> ALLOWED_VENDORS = List.of("adoptopenjdk", "openjdk");
+    static final Pattern VERSION_PATTERN =
+        Pattern.compile("(\\d+)(\\.\\d+\\.\\d+)?\\+(\\d+(?:\\.\\d+)?)(@([a-f0-9]{32}))?");
+    private static final List<String> ALLOWED_PLATFORMS = Collections.unmodifiableList(Arrays.asList("darwin", "linux", "windows", "mac"));
 
     private final String name;
     private final Configuration configuration;
 
+    private final Property<String> vendor;
     private final Property<String> version;
     private final Property<String> platform;
-
 
     Jdk(String name, Project project) {
         this.name = name;
         this.configuration = project.getConfigurations().create("jdk_" + name);
+        this.vendor = project.getObjects().property(String.class);
         this.version = project.getObjects().property(String.class);
         this.platform = project.getObjects().property(String.class);
     }
 
     public String getName() {
         return name;
+    }
+
+    public String getVendor() {
+        return vendor.get();
+    }
+
+    public void setVendor(final String vendor) {
+        if (ALLOWED_VENDORS.contains(vendor) == false) {
+            throw new IllegalArgumentException("unknown vendor [" + vendor + "] for jdk [" + name + "], must be one of " + ALLOWED_VENDORS);
+        }
+        this.vendor.set(vendor);
     }
 
     public String getVersion() {
@@ -83,14 +97,29 @@ public class Jdk implements Buildable, Iterable<File> {
         return configuration;
     }
 
+    public String getPath() {
+        return configuration.getSingleFile().toString();
+    }
+
     @Override
     public String toString() {
-        return configuration.getSingleFile().toString();
+        return getPath();
     }
 
     @Override
     public TaskDependency getBuildDependencies() {
         return configuration.getBuildDependencies();
+    }
+
+    public Object getBinJavaPath() {
+        return new Object() {
+            @Override
+            public String toString() {
+                final String platform = getPlatform();
+                final boolean isOSX = "mac".equals(platform) || "darwin".equals(platform);
+                return getPath() + (isOSX ? "/Contents/Home" : "") + "/bin/java";
+            }
+        };
     }
 
     // internal, make this jdks configuration unmodifiable
@@ -101,12 +130,17 @@ public class Jdk implements Buildable, Iterable<File> {
         if (platform.isPresent() == false) {
             throw new IllegalArgumentException("platform not specified for jdk [" + name + "]");
         }
+        if (vendor.isPresent() == false) {
+            throw new IllegalArgumentException("vendor not specified for jdk [" + name + "]");
+        }
         version.finalizeValue();
         platform.finalizeValue();
+        vendor.finalizeValue();;
     }
 
     @Override
     public Iterator<File> iterator() {
         return configuration.iterator();
     }
+
 }
